--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     body {
-      color: #00b3e6;
+      background-color: #00b3e6;
       }
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
