--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
     <link rel = "stylesheet" href = "./style.css">
+      body {
+        background
   </head>
   
-body {
-      background-color: #00b3e6;
-      }
+
       
   <body>
     
