--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <!-- Your code here! -->
     <link rel = "stylesheet" href = "./style.css">
       body {
-        background
+        background: #00b3e6;
+        }
   </head>
   
-
-      
   <body>
-    
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
